Update copy-files-to-blobstorage.yml for Azure Pipelines

--- a/copy-files-to-blobstorage.yml
+++ b/copy-files-to-blobstorage.yml
@@ -80,7 +80,7 @@ stages:
   jobs:
   - deployment: Deploy
     displayName: Deploy
-    environment: Production
+    environment: ProductionDeploy
     pool:
       vmImage: $(VMIMAGENAME)
     strategy:
