--- a/copy-files-to-blobstorage.yml
+++ b/copy-files-to-blobstorage.yml
@@ -71,45 +71,45 @@ stages:
 
 
 
-            #####production Release required approval######
+#             #####production Release required approval######
 
-- stage: DeployProduction
-  displayName: Deploy Production
-  dependsOn: DeployStaging
-  condition: succeeded()
-  jobs:
-  - deployment: Deploy
-    displayName: Deploy
-    environment: ProductionDeploy
-    pool:
-      vmImage: $(VMIMAGENAME)
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - task: AzureFileCopy@3
-            displayName: 'AzureBlob File Copy'
-            inputs:
-              SourcePath: '$(Pipeline.Workspace)/drop'
-              azureSubscription: 'azconnection'
-              Destination: 'AzureBlob'
-              storage: $(PRODUCTIONSTORAGE)
-              ContainerName: 'input'
-              sasTokenTimeOutInMinutes: '240'
+# - stage: DeployProduction
+#   displayName: Deploy Production
+#   dependsOn: DeployStaging
+#   condition: succeeded()
+#   jobs:
+#   - deployment: Deploy
+#     displayName: Deploy
+#     environment: ProductionDeploy
+#     pool:
+#       vmImage: $(VMIMAGENAME)
+#     strategy:
+#       runOnce:
+#         deploy:
+#           steps:
+#           - task: AzureFileCopy@3
+#             displayName: 'AzureBlob File Copy'
+#             inputs:
+#               SourcePath: '$(Pipeline.Workspace)/drop'
+#               azureSubscription: 'azconnection'
+#               Destination: 'AzureBlob'
+#               storage: $(PRODUCTIONSTORAGE)
+#               ContainerName: 'input'
+#               sasTokenTimeOutInMinutes: '240'
 
 
 
-          - task: PowerShell@2
-            inputs:
-              targetType: 'inline'
-              script: |
-                # Write your PowerShell commands here.
+#           - task: PowerShell@2
+#             inputs:
+#               targetType: 'inline'
+#               script: |
+#                 # Write your PowerShell commands here.
                 
                
-                $messageCardBody=@"
-                { "@type": "MessageCard", "@context": "https://schema.org/extensions", "summary": "1 new build message", "themeColor": "0078D7", "sections": [ { "activityImage": "https://cdn2.iconfinder.com/data/icons/weby-flat-vol-1/512/1_Approved-check-checkbox-confirm-green-success-tick-512.png", "activityTitle": "Notification", "activitySubtitle": "Copy Files", "facts": [ { "name": "EnvName:", "value": "$(Environment.Name)" }, { "name": "ApplicationName:", "value": "${env:PRODUCTIONSTORAGE}" },{ "name": "BuildNumber:", "value": "$(Build.BuildNumber)" },{ "name": "BuildStatus:", "value": "$(Agent.JobStatus)" }], "text": "Deployment to $(Environment.Name)", "potentialAction": [  ] } ] }
-                "@
-                echo ${messageCardBody}
-                echo ${env:PRODUCTIONSTORAGE}
+#                 $messageCardBody=@"
+#                 { "@type": "MessageCard", "@context": "https://schema.org/extensions", "summary": "1 new build message", "themeColor": "0078D7", "sections": [ { "activityImage": "https://cdn2.iconfinder.com/data/icons/weby-flat-vol-1/512/1_Approved-check-checkbox-confirm-green-success-tick-512.png", "activityTitle": "Notification", "activitySubtitle": "Copy Files", "facts": [ { "name": "EnvName:", "value": "$(Environment.Name)" }, { "name": "ApplicationName:", "value": "${env:PRODUCTIONSTORAGE}" },{ "name": "BuildNumber:", "value": "$(Build.BuildNumber)" },{ "name": "BuildStatus:", "value": "$(Agent.JobStatus)" }], "text": "Deployment to $(Environment.Name)", "potentialAction": [  ] } ] }
+#                 "@
+#                 echo ${messageCardBody}
+#                 echo ${env:PRODUCTIONSTORAGE}
 
-                Invoke-RestMethod -uri ${env:WEBHOOKURL} -Method Post -body $messageCardBody -ContentType ‘application/json’         
+#                 Invoke-RestMethod -uri ${env:WEBHOOKURL} -Method Post -body $messageCardBody -ContentType ‘application/json’         
