--- a/copy-files-to-blobstorage.yml
+++ b/copy-files-to-blobstorage.yml
@@ -26,6 +26,14 @@ stages:
           SourceFolder: 'source'
           Contents: '**'
           TargetFolder: '$(Build.ArtifactStagingDirectory)'
+
+      
+
+
+
+
+
+
       - task: PublishBuildArtifacts@1
         displayName: 'Publish Artifact: drop'
     
@@ -45,15 +53,30 @@ stages:
       runOnce:
         deploy:
           steps:
-          - task: AzureFileCopy@3
-            displayName: 'AzureBlob File Copy'
+          # - task: AzureFileCopy@3
+          #   displayName: 'AzureBlob File Copy'
+          #   inputs:
+          #     SourcePath: '$(Pipeline.Workspace)/drop'
+          #     azureSubscription: 'azconnection'
+          #     Destination: 'AzureBlob'
+          #     storage: 'webcsvviewerneustgsa'
+          #     ContainerName: 'input'
+          #     sasTokenTimeOutInMinutes: '240'
+
+
+
+          - task: AzureFileCopy@4
             inputs:
               SourcePath: '$(Pipeline.Workspace)/drop'
               azureSubscription: 'azconnection'
               Destination: 'AzureBlob'
               storage: 'webcsvviewerneustgsa'
               ContainerName: 'input'
-              sasTokenTimeOutInMinutes: '240'
+
+
+
+
+
 
 
           - task: PowerShell@2
